Trim Search Engine keywords

This leaves original user input (from chrome://settings/searchEngines)
untouched but effectively fixes a bug in which a user accidentally
leaves a leading space while editing via Chrome's Settings UI and
functionally breaks that search engine (typing \s + keyword doesn't work
as far as I can tell).

Bug: 817132
Change-Id: I7e34927fafc853b056e6a721e7f4e903e3652d4d
Reviewed-on: https://chromium-review.googlesource.com/940454
Commit-Queue: Dan Beam (no longer on Chrome) <dbeam@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539683}
Former-commit-id: f9b688e8731a0aa30e9686cec098898c82c6a4e9